# videoio-python

./: .gitignore  LICENSE  README.md  example.py  notes.md  setup.py
cpp/: CMakeLists.txt
cpp/cmake/: Fetch.cmake  FindFFmpeg.cmake
cpp/ffms2/: CMakeLists.txt  LICENSE
cpp/ffms2/src/core/: videosource.cpp  videosource.h
cpp/src/: bind.cpp  log_timeit.hpp  main.cpp  read_video.cpp  read_video.hpp  video_reader.cpp
cpp/src/ffmpeg/: _common.hpp  ffmpeg.hpp  ffmpeg_fn.cpp  ffmpeg_fn.hpp  ffmpeg_stream.hpp  time_unit.hpp
cpp/src/ffutils/: common.cpp  common.hpp  ffutils.hpp  stream.hpp  video_reader.cpp
cpp/src/utils/: circle_buffer.hpp  time_unit.hpp  timer.hpp  utils.hpp  vec.hpp
cpp/src_backup/: bind.cpp  main.cpp  video_reader.hpp
ffutils/: __init__.py
scripts/: install_ffmpeg_ubuntu.sh
src/: CMakeLists.txt  avio.hpp  common.cpp  common.hpp  log.hpp  pybind.cpp  stream.cpp  stream.hpp  test.cpp  video_reader.cpp  video_reader.hpp  video_writer.cpp  video_writer.hpp
src/cmake/: Fetch.cmake
src/src/: bind.cpp  main.cpp  nanobind.cpp  pybind.cpp
src/src/ffutils/: common.cpp  common.hpp  ffutils.hpp  stream.hpp  video_reader.cpp  video_reader.hpp  video_writer.cpp  video_writer.hpp
src/src/utils/: circle_buffer.hpp  log.hpp  time_unit.hpp  timer.hpp  utils.hpp
videoio/: __init__.py  props.py  reader.py  writer.py
